# faithe

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  types.rs
src/internal/: memory.rs  mod.rs  module.rs  process.rs  thread.rs
src/macros/: function.rs  global.rs  interface.rs  mod.rs  parent.rs  sizeof.rs  strings.rs  vmt.rs  xstruct.rs
src/memory/: basic_info.rs  info.rs  mod.rs  protection.rs
src/module/: iter.rs  mod.rs  pat.rs
src/pattern/: lmao.py  mod.rs  pat.rs  searcher.rs
src/process/: iter.rs  mod.rs  proc.rs  query.rs  regions.rs
src/ptr/: mod.rs
src/thread/: iter.rs  mod.rs
src/types/: entry.rs  memory.rs  mod.rs  string.rs  winapi.rs
