[package]
name = "faithe"
version = "0.5.0"
edition = "2021"
authors = ["sy1ntexx"]
license = "MIT"
description = "Windows memory hacking library."
readme = "README.md"
repository = "https://github.com/sy1ntexx/faithe"
exclude = ["examples"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[features]
default = ["nightly"]
nightly = []
external = [
    'windows/Win32_System_Diagnostics_ToolHelp',
    'windows/Win32_System_Diagnostics_Debug',
    'windows/Win32_System_Kernel',
]

[dependencies]
thiserror = "1.0.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.32.0"
features = [
    'Win32_UI_WindowsAndMessaging',
    'Win32_System_ProcessStatus',
    'Win32_System_LibraryLoader',
    'Win32_System_Threading',
    'Win32_System_Console',
    'Win32_System_Memory',
    'Win32_Foundation',
    'Win32_Security',
]
